--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     display: flex;
     margin-top: 40px;
     align-items: center;
+    justify-content: center;
 }
 .half-width {
     width: 50%;
@@ -67,5 +68,30 @@ h2 {
     padding-right: 100px;
 }
 
-
 /* MY RECIPIES SECTION */
+
+#my-recipies {
+    margin-top: 60px;
+    text-align: center;
+}
+.card {
+    width: 25%;
+    margin: 15px;
+    padding: 10px;
+    text-align: left;
+    border-radius: 30px;
+    box-shadow: 0px 0px 30px rgb(156, 155, 155);
+}
+.card img {
+    width: 100%;
+}
+h3 {
+    color: #575757;
+    font-size: 30px;
+}
+.card p {
+    margin: 15px 0;
+}
+h3 {
+    margin-top: 40px;
+}
