--- a/style.css
+++ b/style.css
@@ -7,6 +7,29 @@
     color: #828282;
 }
 
+h1 {
+    color: #575757;
+    font-size: 60px;
+    line-height: 75px;
+}
+h2 {
+    color: #575757;
+    font-size: 40px;
+}
+h3 {
+    color: #575757;
+    font-size: 30px;
+    margin-top: 40px;
+}
+h4{
+    color: #18191E;
+    font-size: 50px;
+}
+p {
+    margin: 30px 0;
+    font-size: 20px;
+    line-height: 35px;
+}
 /* FIRST SECTION */
 
 .flex-container {
@@ -21,21 +44,11 @@
 .info {
     margin-left: 100px;
 }
-h1 {
-    color: #575757;
-    font-size: 60px;
-    line-height: 75px;
-}
 .mark {
     color: #FC8B47;
 }
 .half-width img {
     width: 90%;
-}
-p {
-    margin: 30px 0;
-    font-size: 20px;
-    line-height: 35px;
 }
 .cta {
     text-decoration: none;
@@ -59,10 +72,6 @@ p {
     padding-top: 100px;
     padding-left: 100px;
 }
-h2 {
-    color: #575757;
-    font-size: 40px;
-}
 .about-me p {
     margin-bottom: 90px;
     padding-right: 100px;
@@ -77,21 +86,28 @@ h2 {
 .card {
     width: 25%;
     margin: 15px;
-    padding: 10px;
+    padding: 20px;
     text-align: left;
     border-radius: 30px;
-    box-shadow: 0px 0px 30px rgb(156, 155, 155);
+    box-shadow: 0px 0px 15px rgb(156, 155, 155);
 }
 .card img {
     width: 100%;
 }
-h3 {
-    color: #575757;
-    font-size: 30px;
-}
 .card p {
     margin: 15px 0;
 }
-h3 {
-    margin-top: 40px;
+.follower-tab {
+    width: 87%;
+    margin: auto;
+    margin-top: 150px;
+    padding: 50px 0;
+    border-radius: 30px;
+    box-shadow: 0px 0px 15px rgb(156, 155, 155);
+}
+.follower-tab p {
+    margin: 0;
+}
+.box {
+    margin: 0 80px;
 }
