--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ h4{
     color: #18191E;
     font-size: 50px;
 }
+h5 {
+    color: #575757;
+    font-size: 20px;
+}
 p {
     margin: 30px 0;
     font-size: 20px;
@@ -111,6 +115,30 @@ p {
 }
 .box {
     margin: 0 80px;
+}
+
+/* CONTACT ME SECTION */
+
+.contact {
+    width: 100%;
+    display: flex;
+    text-align: center;
+    margin-bottom: 100px;
+}
+input, textarea {
+    border: none;
+    border-bottom: 2px solid #575757;
+    margin-bottom: 40px;
+    padding: 10px;
+    font-size: 20px;
+    width: 450px;
+}
+.contact-info{
+    text-align: left;
+}
+.contact-info p {
+    font-size: 20px;
+    margin-top: 0;
 }
 
 /* FOOTER SECTION */
